--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,27 @@
 # added by gitignore-cli
 
+# 忽略IDEA项目文件夹
 .idea
+# 忽略股票数据文件夹
 stockdata
+# 忽略模型文件夹
 model
+# 忽略日志文件夹
 log
+# 忽略VS Code配置文件夹
 .vscode/
+# 忽略.pkl文件
 *.pkl
 
-# Byte-compiled / optimized / DLL files
+# 忽略字节编译/优化/DLL文件
 __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# 忽略C扩展文件
 *.so
 
-# Distribution / packaging
+# 忽略分发/打包文件
 .Python
 build/
 develop-eggs/
@@ -36,17 +42,16 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+# 忽略PyInstaller相关文件
+# 通常这些文件是由Python脚本从模板中生成的，然后由PyInstaller构建exe文件，以注入日期/其他信息。
 *.manifest
 *.spec
 
-# Installer logs
+# 忽略安装器日志文件
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# 忽略单元测试/覆盖率报告文件
 htmlcov/
 .tox/
 .nox/
@@ -61,60 +66,57 @@ coverage.xml
 .pytest_cache/
 cover/
 
-# Translations
+# 忽略翻译文件
 *.mo
 *.pot
 
-# Django stuff:
+# 忽略Django相关文件
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# 忽略Flask相关文件
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+# 忽略Scrapy相关文件
 .scrapy
 
-# Sphinx documentation
+# 忽略Sphinx文档生成文件
 docs/_build/
 
-# PyBuilder
+# 忽略PyBuilder相关文件
 .pybuilder/
 target/
 
-# Jupyter Notebook
+# 忽略Jupyter Notebook相关文件
 .ipynb_checkpoints
 
-# IPython
+# 忽略IPython配置文件
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
+# 忽略pyenv相关文件
+# 对于库或包，您可能希望忽略这些文件，因为代码旨在在多个环境中运行；否则，可以将它们检入：
 # .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
+# 忽略pipenv相关文件
+# 根据pypa/pipenv#598建议，建议将Pipfile.lock包含在版本控制中。
+# 但是，在协作的情况下，如果存在特定于平台的依赖项或不支持跨平台的依赖项，pipenv可能会安装不起作用的依赖项或未安装所有所需的依赖项。
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# PEP 582; 例如github.com/David-OConnor/pyflow使用
 __pypackages__/
 
-# Celery stuff
+# 忽略Celery相关文件
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
+# 忽略SageMath解析文件
 *.sage.py
 
-# Environments
+# 忽略环境文件夹
 .env
 .venv
 env/
@@ -123,30 +125,30 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# 忽略Spyder项目设置文件
 .spyderproject
 .spyproject
 
-# Rope project settings
+# 忽略Rope项目设置文件
 .ropeproject
 
-# mkdocs documentation
+# 忽略mkdocs文档生成文件
 /site
 
-# mypy
+# 忽略mypy相关文件
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+# 忽略Pyre类型检查器相关文件
 .pyre/
 
-# pytype static type analyzer
+# 忽略pytype静态类型分析器相关文件
 .pytype/
 
-# Cython debug symbols
+# 忽略Cython调试符号文件
 cython_debug/
 
-# static files generated from Django application using `collectstatic`
+# 忽略通过`collectstatic`生成的Django应用程序的静态文件
 media
 static
